# port-scanner

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/port_scanner/: __about__.py  __main__.py  app.py  decorators.py  logger.py  networking.py
src/port_scanner/tui/: tui.py  tui.tcss
tests/: __init__.py  test_app.py  test_decorators.py  test_networking.py
